inizio a impostare la struttura della mia pagina

--- a/index.html
+++ b/index.html
@@ -8,14 +8,20 @@
     <title>Document</title>
     <!-- includo Bootstrap icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <!-- style -->
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <div class="conatianer">
+        <div id="carousel">
+            <div class="gallery">
+                <img src="img/01.webp" alt="hero1">
+            </div>
+        </div>
+    </div>
 
 
-
-    
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <!-- Javascript -->
     <script src="js/script.js"></script>
 </body>
 </html>
