--- a/index.html
+++ b/index.html
@@ -14,9 +14,15 @@
 <body>
     <div class="conatianer">
         <div id="carousel">
+            <i class="bi bi-arrow-left-square"></i>
             <div class="gallery">
-                <img src="img/01.webp" alt="hero1">
+                <img src="img/01.webp" class="active" alt="hero1">
+                <img src="img/02.webp" alt="hero2">
+                <img src="img/03.webp" alt="hero3">
+                <img src="img/04.webp" alt="hero4">
+                <img src="img/05.webp" alt="hero5">
             </div>
+            <i class="bi bi-arrow-right-square"></i>
         </div>
     </div>
 
