--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="conatianer">
         <div id="carousel">
-            <i class="bi bi-arrow-left-square"></i>
+            <i id="prev" class="bi bi-arrow-up-square"></i>
             <div class="gallery">
                 <img src="img/01.webp" class="active" alt="hero1">
                 <img src="img/02.webp" alt="hero2">
@@ -22,7 +22,7 @@
                 <img src="img/04.webp" alt="hero4">
                 <img src="img/05.webp" alt="hero5">
             </div>
-            <i class="bi bi-arrow-right-square"></i>
+            <i id="next" class="bi bi-arrow-down-square"></i>
         </div>
     </div>
 
