generezione img attraverso Js e funzionalità dei bottoni

--- a/index.html
+++ b/index.html
@@ -16,11 +16,7 @@
         <div id="carousel">
             <i id="prev" class="bi bi-arrow-up-square"></i>
             <div class="gallery">
-                <img src="img/01.webp" class="active" alt="hero1">
-                <img src="img/02.webp" alt="hero2">
-                <img src="img/03.webp" alt="hero3">
-                <img src="img/04.webp" alt="hero4">
-                <img src="img/05.webp" alt="hero5">
+             <!-- qui devo inserire le mie img -->
             </div>
             <i id="next" class="bi bi-arrow-down-square"></i>
         </div>
