aggiunta struttura thumbnails

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="conatianer">
+    <div class="container">
         <div id="carousel">
             <i id="prev" class="bi bi-arrow-up-square"></i>
             <div class="gallery">
@@ -21,6 +21,7 @@
             <i id="next" class="bi bi-arrow-down-square"></i>
         </div>
     </div>
+    <div id="thumbnails"></div>
 
 
     <!-- Javascript -->
